samples/_failures_safe/1761641813_53f30c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_644bbb63.c: In function ‘read_user_input’:
./samples/SAFE/__tmp_644bbb63.c:169:7: error: ‘struct StateMachine’ has no member named ‘data’
  169 |     sm->data
      |       ^~
./samples/SAFE/__tmp_644bbb63.c:169:13: error: expected ‘;’ at end of input
  169 |     sm->data
      |             ^
      |             ;
./samples/SAFE/__tmp_644bbb63.c:169:5: error: expected declaration or statement at end of input
  169 |     sm->data
      |     ^~
